# dotfiles

./: .gitignore  LICENSE  Makefile  README.md
docs/: keymap.md
nvim/: init.lua  nvim  pyproject.toml
nvim/.config/nvim/: init.lua  pyproject.toml
nvim/.config/nvim/lua/: keymap.lua  options.lua  plugins.lua  symbols.lua  theme.lua
nvim/.config/nvim/lua/keymap/: helpers.lua
nvim/.config/nvim/lua/plugins/: bufferline.lua  cmp-config.lua  cmp.lua  fzf-lua-config.lua  gitsigns-config.lua  indent-blankline-config.lua  indent-blankline.lua  lspconfig.lua  lualine-config.lua  lualine.lua  neo-tree-config.lua  neoformat.lua  neogen-config.lua  null-ls-config.lua  null-ls.lua  nvim-config-local-config.lua  nvim-dap-config.lua  nvim-gps-config.lua  nvim-lspconfig-config.lua  nvim-tree-config.lua  onedark-config.lua  symbols-outline-config.lua  telescope-config.lua  telescope.lua  treesitter-config.lua  treesitter.lua  vim-dadbod-ui-config.lua
nvim/lua/: keymap.lua  options.lua  plugins.lua  theme.lua
nvim/lua/keymap/: helpers.lua
nvim/lua/plugins/: bufferline.lua  cmp.lua  lspconfig.lua  null-ls.lua  nvim-tree.lua  telescope.lua  treesitter.lua  undotree.lua
starship/.config/: starship.toml
tmux/: .tmux.conf
