[tool.poetry]
name = "nvim"
version = "0.1.0"
description = ""
authors = ["Niels van Huijstee <niels@huijs.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["rope", "mccabe", "pydocstyle"], version = "^1.3.3"}
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.1"
pylsp-rope = "^0.1.8"
pylsp-mypy = "^0.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
