[tool.poetry]
name = "nvim"
version = "0.1.0"
description = ""
authors = ["Niels van Huijstee <niels@huijs.net>"]

[tool.poetry.dependencies]
python = "^3.8"
pynvim = "^0.4.3"

python-lsp-server = "^1.3.3"
mypy = "^0.931"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
jedi-language-server = "^0.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

